--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "bootstrap": "^5.3.6",
     "classnames": "^2.5.1",
     "export-from-json": "^1.7.4",
+    "moment": "^2.30.1",
     "react": "^19.1.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-data-table-component": "^7.7.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.56.3",
